# letonikabc

./: .gitignore  Cargo.toml  README.md  index.html  package.json  svelte.config.js  svelte.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
assets/: app_bg-09RaNoo2.wasm  app_bg-CpaMzczr.wasm  app_bg-W7VFUhBF.wasm  dbrel.drawio  index-7LxI9K1G.css  index-BZFWMgtU.js  index-BnVOPDLQ.js  index-CblhVbAK.css  index-Ck8Owvb0.js  index-DGu2J18Y.js  index-Yt7BQVhD.css  readme-saites.drawio  wireframe.drawio
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs  macros.rs  parse_html.rs  tests.rs
crates/parser/src/parse_html/: mod.rs  tests.rs
crates/reader/: Cargo.toml
crates/reader/src/: lib.rs  md2html.rs  tests.rs
crates/reader/src/md2html/: mod.rs  tests.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
src/: App.svelte  App.tsx  db.ts  errorHandler.ts  main.ts  main.tsx  style.css
src/components/: Reader.svelte
src/components/Menu/: LoadDocument.svelte  LoadDocuments.svelte  Menu.svelte  NewDocument.svelte
