[workspace]
members = [
  "crates/app",
  "crates/parser",
  "crates/reader",
]
resolver = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = "symbols"
debug = false
debug-assertions = false

[workspace.dependencies]
# Crates
parser = { path = "crates/parser" }
reader = { path = "crates/reader" }

# External
wasm-bindgen = { version = "0.2.106", default-features = false }
web-sys = { version = "0.3.83", default-features = false, features = [
    "console"
] }
wee_alloc = { version = "0.4.5", default-features = false }
