[workspace]
members = [
  "crates/app",
  "crates/parser",
  "crates/reader",
  "crates/utils",
]
resolver = "2"

[workspace.package]
authors = ["robertpakalns"]
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/robertpakalns/letonikabc"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = "symbols"
debug = false
debug-assertions = false

[workspace.dependencies]
# Crates
parser = { path = "crates/parser" }
reader = { path = "crates/reader" }
utils = { path = "crates/utils" }

# External
wasm-bindgen = { version = "0.2.106", default-features = false }
web-sys = { version = "0.3.83", default-features = false, features = [
    "console"
] }
wee_alloc = { version = "0.4.5", default-features = false }
