[package]
name = "app"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "Letonika Better Client main entry"
repository.workspace = true
license-file.workspace = true

[lib]
crate-type = ["cdylib"]

# Use wasm-opt separately via bun run opt
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
# Crates
parser.workspace = true
reader.workspace = true

# External
wasm-bindgen.workspace = true
wee_alloc.workspace = true
