[package]
name = "parser"
version = "0.1.0"
authors = ["robertpakalns"]
edition = "2024"
description = "HTML to Markdown parser, designed for working with letonika.lv resources"
repository = "https://github.com/robertpakalns/letonikabc"
license-file = "../../LICENSE"

[lib]
crate-type = ["cdylib"]

# Use wasm-opt separately via bun run opt
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
html5ever = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
