[package]
name = "parser"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "HTML to Markdown parser, designed for working with letonika.lv resources"
repository.workspace = true
license-file.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
utils.workspace = true
