[package]
name = "reader"
version = "0.1.0"
authors = ["robertpakalns"]
edition = "2024"
description = "Markdown to HTML converter"
repository = "https://github.com/robertpakalns/letonikabc"
license-file = "../../LICENSE"

[lib]
crate-type = ["lib"]

# Use wasm-opt separately via bun run opt
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wasm-bindgen.workspace = true
