[package]
name = "utils"
version = "0.1.0"
authors = ["robertpakalns"]
edition = "2024"
description = "Utilities for the parser and reader crates"
repository = "https://github.com/robertpakalns/letonikabc"
license-file = "../../LICENSE"

[lib]
crate-type = ["lib"]

[dependencies]
web-sys.workspace = true
